--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,8 +37,8 @@ jobs:
         
       - name: 提交更改
         run: |
-          git config --local user.email "ssili@126.com"
-          git config --local user.name "ssili126"
+          git config --local user.email "lptv11204@gmail.com"
+          git config --local user.name "lptv24"
           git add .
           git commit *.txt -m "Add generated file"
           git commit *.m3u -m "Add generated file"
