--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,10 +3,14 @@ name: itvlist
 on:
   schedule:
     - cron: '0 21 * * *'
+    
+permissions:
+  contents: write
+  
   push:
     branches:
       - main
-
+      
 jobs:
   build:
     runs-on: ubuntu-latest
