--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,8 +4,8 @@ on:
   schedule:
     - cron: '0 21 * * *'
     
-permissions:
-  contents: write
+#permissions:
+# contents: write
   
   push:
     branches:
